--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -10,6 +10,6 @@
     <div class="inline-block ml-2">
       <%= button_to 'Destroy this course', course_path(@course), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
     </div>
-    <%= link_to 'Back to courses', courses_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to 'Add Exercise', new_course_exercise_path(@course), class: "ml-2 rounded-full py-2 px-4 bg-blue-300 inline-block font-medium" %>
   </div>
 </div>
