--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -11,7 +11,7 @@
 
     <!-- Exercises Card-->
     <div class="border m-2">
-        <%#= render "courses/shared/exercises" %>
+        <%= render "courses/shared/exercises" %>
     </div>
 </div>
 
