--- a/app/views/courses/shared/_exercises.html.erb
+++ b/app/views/courses/shared/_exercises.html.erb
@@ -3,7 +3,7 @@
 <% else %>
 <% @course.exercises.each do |exercise| %>
     <div class="my-2">
-        <div class=" border m-2 p-2 font-bold text-xl"><%= exercise.title %></div>
+        <div class=" border m-2 p-2 font-bold text-xl"><%= exercise.name %></div>
     </div>
 
 <% end %>
