--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -16,6 +16,24 @@
     <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
+<div data-controller="nested-form" data-nested-form-index-value='QUESTION_RECORD'>
+    <template data-nested-form-target='template'>
+        <%= form.fields_for :questions, Question.new, child_index: 'QUESTION_RECORD' do |question| %>
+            QUESTION - QUESTION_RECORD
+            <%= render 'question_fields', form: question %>
+        <% end %>
+    </template>
+
+    <%= form.fields_for :questions do |question| %>
+        <%= render 'question_fields', form: question %>
+    <% end %>
+
+    <div data-nested-form-target="add_item">
+        <%= link_to "Add Question", "#", data: { action: "nested-form#add_association" } %>
+    </div>
+</div>
+
+
   <div class="inline">
     <%= form.submit "Push Exercise", class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
   </div>
