--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,13 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
 
 @layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
+  .Add-item-exercise {
+    @apply font-bold bg-gray-300 p-2 m-4;
+  };
+  .Add-item-delete{
+    @apply p-1 mt-2 bg-gray-200 font-bold;
   }
 }
 
-*/
+
 @import 'actiontext.css';
