--- a/app/views/exercises/_answer_fields.html.erb
+++ b/app/views/exercises/_answer_fields.html.erb
@@ -1,14 +1,25 @@
+<% %>
 <div class='nested-fields'>
   <div class='form-group flex'>
     <%= form.hidden_field :_destroy %>
     <div class="flex">
-    <%#= form.radio_button %> <%= form.label :Correcte %>
-    
-    <%= form.text_field :name, placeholder: 'Réponse A', class: 'mx-4' %>
-    <%= form.text_field :name, placeholder: 'Réponse B', class: 'mx-4' %>
+      <div class="">
+        <%= form.radio_button :correct, checked_value: true, unchecked_value: false  %>
+        <%= form.text_field :name, placeholder: 'Réponse A', class: '' %>
+      </div>
     </div>
+
+    <div class="flex ml-4">
+      <div class="">
+        <%= form.radio_button :correct, checked_value: true, unchecked_value: false  %>
+        <%= form.text_field :name, placeholder: 'Réponse B', class: '' %>
+      </div>
+    </div>    
+  </div>
+  <div class="">
     <small>
-      <%= link_to "Supprimé", "#", data: { action: "click->nested-form#remove_association" } %>
+      <%= link_to "Supprimé", "#", data: { action: "click->nested-form#remove_association" },
+          class:"Add-item-delete" %>
     </small>
   </div>
 </div>
