--- a/app/views/courses/shared/_completed_exercises.html.erb
+++ b/app/views/courses/shared/_completed_exercises.html.erb
@@ -4,7 +4,8 @@
     </div>
     <div class="flex my-2 gap-6 ">
         <p class="mx-4 ">Comprit a:
-            <%= q.user_grade(current_user) %></p>
+            <%= q.user_grade(current_user) %>
+        </p>
         <%= link_to "Refait exercice", new_exercice_result_path(q), class: "text-black bg-gray-200 px-2"%>
     </div>
 </div>
