--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -16,18 +16,18 @@
     <%= form.text_field :name, class: "block border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
-<div data-controller="nested-form" data-nested-form-index-value='QUESTION_RECORD'
-class="my-5  border py-4">
+<div data-controller="nested-form" data-nested-form-index-value='QUESTION_RECORD' class="my-5  border py-4">
     <template data-nested-form-target='template'>
         <%= form.fields_for :questions, Question.new, child_index: 'QUESTION_RECORD' do |question| %>
             <%= render 'question_fields', form: question %>
         <% end %>
     </template>
 
-    <%= form.fields_for :questions do |question| %>
-        <%= render 'question_fields', form: question %>
-    <% end %>
+    <%#= form.fields_for :questions do |question| %>
+        <%#= render 'question_fields', form: question %>
+    <%# end %>
 
+    <!-- Add Question button-->
     <div data-nested-form-target="add_item">
         <%= link_to "Question", "#", data: { action: "nested-form#add_association" },
         class:"Add-item-exercise" %>
