Add Exercise feature basic

--- a/app/views/courses/shared/_new_exercises.html.erb
+++ b/app/views/courses/shared/_new_exercises.html.erb
@@ -8,9 +8,7 @@
             <h2 class="font-semibold"><%= exercise.name %></h2>
         </div>
         <div class="m-2 text-sm">
-            <p>
-                <%= exercise.questions.count %>
-                Questions</p>
+            <p> <%= exercise.questions.count %> Questions </p>
         </div>
     <% end %>
 </div>
