--- a/app/views/results/_form.html-b.erb
+++ b/app/views/results/_form.html-b.erb
@@ -3,20 +3,22 @@
   <%= f.hidden_field :exercise_id %>
 <ol class="text-black">
     <%= f.fields_for :answered_questions do |aq| %>
-        <li>
-            <%= aq.hidden_field :question_id %>
+      <li>
+        <%= aq.hidden_field :question_id %>
 
-            <div class="border bg-gray-200 p-2 text-black">
-                <%= aq.object.question.name %>
-            </div>
-            <%= aq.object.question.question_type %>
-            
+        <div class="border bg-gray-200 p-2 text-black">
+          <%= aq.object.question.name %>
+        </div>
+        <%# case aq.object.question_type %>
+          <%# when "single_choice" %>
             <%= aq.collection_radio_buttons( :answer_id, aq.object.question.answers, :id, :name) do |b| %>
-                <div class="border p-2 my-2">
-                    <%= b.radio_button %>
-                    <%= b.label %>
-                </div>
+              <div class="border p-2 my-2">
+                <%= b.radio_button %>
+                <%= b.label %>
+              </div>
             <% end %>
+          <%# end %>
+        <%# end %>
         </li>
     <% end %>
 </ol>
